--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,442 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    height: 100%;
+    background-color: #a3a3a386;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    width: 534px;
+    border-radius: 20px;
+    background-color: white;
+    transition: all ease-in-out 0.5s;
+}
+
+.heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.title {
+    height: 35px;
+    margin-left: 25px;
+    margin-top: 30px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 23px;
+    line-height: 34px;
+    color: #070602;
+}
+
+.close-icon {
+    width: 18px;
+    height: 18px;
+    margin-right: 25px;
+    margin-top: 25px;
+}
+
+.small-titles {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 25px;
+}
+
+.small-titles svg {
+    font-size: 20px;
+}
+
+.small-title-text {
+    width: 33px;
+    height: 24px;
+    color: rgba(128, 128, 128, 1);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+.small-title-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 12px;
+}
+
+.small-title-icon-on {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(248, 196, 0, 1);
+    width: 24px;
+    margin-left: 18px;
+}
+
+.cake-div {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 484px;
+    height: 60px;
+    margin-left: 25px;
+    margin-top: 9px;
+    background: #f9fafb;
+    border: 1px solid #ececec;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.cake-title {
+    width: 136px;
+    margin-right: 10px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.cake-details-div {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.price {
+    margin-left: 20%;
+    color: rgba(168, 168, 168, 1);
+    width: 51px;
+    height: 18px;
+    margin-top: 10px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.account {
+    background: #fff9aa;
+    border-radius: 10px;
+    padding: 9px 23px;
+    width: 126px;
+    height: 36px;
+    margin-left: 25px;
+    margin-top: 9px;
+    font-style: normal;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 150%;
+    text-align: center;
+    color: #000000;
+}
+
+.balance {
+    background: rgba(248, 248, 248, 1);
+    border-radius: 10px;
+    padding: 9px 23px;
+    width: 80px;
+    height: 36px;
+    margin-left: 10px;
+    margin-top: 9px;
+    font-style: normal;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 150%;
+    text-align: center;
+    color: #000000;
+}
+
+.timeframe h2 {
+    width: 79px;
+    height: 21px;
+    margin-left: 28px;
+    margin-top: 15px;
+    color: rgba(0, 0, 0, 1);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.timeframe-divs-container {
+    margin: 13px 25px 0 25px;
+    display: flex;
+    align-items: center;
+}
+
+.timeframe-divs-container>div:first-child {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 92px;
+    height: 37px;
+    background: #fceb74;
+    color: #081e3f;
+    border: 1px solid #fed700;
+    box-shadow: 0px 2px 10px rgba(87, 16, 112, 0.08);
+    border-radius: 30px;
+    margin-right: 6px;
+}
+
+.timeframe-divs-container>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(162, 162, 162, 1);
+    width: 92px;
+    height: 37px;
+    margin-right: 6px;
+    background: rgba(249, 250, 251, 1);
+    border-radius: 30px;
+}
+
+.apy-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 25px;
+}
+
+.apy-title {
+    margin-top: 18px;
+    width: 192px;
+    height: 27px;
+    color: rgba(0, 0, 0, 1);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 170%;
+}
+
+.apy-switch {
+    width: 44px;
+    height: 34px;
+    margin-top: 16px;
+    margin-right: 26px;
+}
+
+.apy-switch svg {
+    color: rgba(234, 234, 234, 1);
+    font-size: 46px;
+}
+
+.select-tier-title h2 {
+    width: 79px;
+    height: 21px;
+    margin-left: 28px;
+    margin-top: 15px;
+    color: rgba(163, 163, 163, 1);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 92px;
+    height: 37px;
+    background: #fceb74 !important;
+    color: #081e3f !important;
+    border: 1px solid #fed700;
+    box-shadow: 0px 2px 10px rgba(87, 16, 112, 0.08);
+    border-radius: 30px;
+    margin-right: 6px;
+}
+
+.select-tier-options {
+    display: flex;
+    align-items: center;
+    margin-left: 25px;
+    margin-top: 13px;
+}
+
+.select-tier-options>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(162, 162, 162, 1);
+    width: 92px;
+    height: 37px;
+    margin-right: 6px;
+    background: rgba(249, 250, 251, 1);
+    border-radius: 30px;
+}
+
+.current-rates {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.current-rates h2 {
+    margin-right: 25px;
+    margin-top: 18px;
+    width: 144px;
+    height: 21px;
+    color: rgba(163, 163, 163, 1);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.current-rates-container {
+    background-color: rgba(249, 250, 251, 1);
+    border-radius: 14px;
+    height: 60px;
+    margin-top: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: all ease-in-out 0.5s;
+}
+
+.current-rates-icons svg {
+    margin-left: 25px;
+    font-size: 20px;
+    color: rgba(168, 168, 168, 1);
+}
+
+.current-rates-input {
+    color: rgba(7, 6, 2, 1);
+    width: 132px;
+    height: 41px;
+    margin-right: 24px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 40px;
+}
+
+.cart-title {
+    margin: 0 25px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.cart-title h2 {
+    width: 105px;
+    height: 18px;
+    margin-top: 11px;
+    color: rgba(168, 168, 168, 1);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.btn-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 16px;
+}
+
+.btn-active {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    color: rgba(255, 255, 255, 1) !important;
+    opacity: 0.8;
+    width: 241px;
+    height: 49px;
+    background: #000000;
+    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 15px;
+}
+
+.btn-container button {
+    outline: none;
+    border: 1px solid #000000;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    color: rgba(102, 102, 102, 1);
+    width: 241px;
+    height: 49px;
+    opacity: 0.8;
+    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 15px;
+}
+
+.show-details-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 0.5s;
+}
+
+.show-details-title div {
+    padding-top: 25px;
+    padding-left: 7px;
+}
+
+.show-details-title h2 {
+    margin-top: 25px;
+    width: 90px;
+    height: 21px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.apy {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 25px;
+}
+
+.apy .title {
+    color: rgba(7, 6, 2, 1);
+    width: 28px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.apy div {
+    color: rgba(250, 194, 0, 1);
+    width: 74px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.hidden-details-list {
+    margin: 0 25px;
+}
+
+.hidden-details-list li {
+    margin-left: 45px;
+    margin-bottom: 9px;
+    height: 21px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    color: #a3a3a3;
 }
